# defcon32-talk-summarizer

./: .envrc.sample  .gitignore  Dockerfile  Makefile  README.md  README.org  defcon_mirror_media_server.py  mirror_defcon.sh  prompt_defcon_talk_summary_pqrst.tmpl  pyproject.toml  requirements.txt  run_spider.py
src/: summarizer.py
tests/: test_ollama_integration.py  test_pdf_processing.py  test_summary_generation.py
